test/tests/errors/error-trap-decs-forgotten.sm
// true
// false
// false
/**/
/**/

program {
    trap {
        var x: int = 1;
        escapeto a;
a:
        output x;
    }
}